Jumbotron z-index fix

--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -67,7 +67,7 @@ a:visited {
 #nav-list a {
   color: #fff;
   text-align: center;
-    border-radius: 5px;
+  border-radius: 5px;
 }
 #nav-list a:hover {
   background: #77f;
@@ -154,7 +154,7 @@ a:visited {
   background-size: auto;
   margin: 0px;
   position: relative;
-  z-index: -10;
+  z-index: 0;
   padding: 200px 15px;
 }
 
